Added variable RA payout Added monthly contribution, withdrawal, and growth calculation.

--- a/IA Report template/Pyfin White Paper.tex
+++ b/IA Report template/Pyfin White Paper.tex
@@ -157,15 +157,15 @@ StrataGEM is a tool for calculating the optimal allocation of a person's retirem
 \paragraph{Background} This tool was inspired by a Fat Wallet Show podcast on \href{https://justonelap.com/podcast-can-one-etf-rule/}{JustOneLap}, which alerted me to the fact that investing optimally for my retirement is a really difficult problem. Although financial advisors can show that e.g. investing the full 27.5\% allowance in an RA is not the most effective way to structure your savings\sidenote{See for example \href{https://www.fin24.com/Finweek/Investment/save-thousands-in-tax-by-diversifying-your-retirement-savings-20180110}{"Save thousands in tax by diversifying your retirement savings"}, By Danie Venter, published 10 January 2018 on Fin24}, it is very difficult to find the optimal allocation, given the tax implications now and at retirement. For example, the more I put in my RA now, the lower my taxable income, and the more I can save on the same salary. But it does mean that during retirement I'll be paying more income tax than I would if I had put the (admittedly less) money in DIs\sidenote{See \href{http://www.stealthywealth.co.za/2018/05/i-love-capital-gains-tax.html}{this} Stealthy Wealth article on CGT vs income tax, and why you rather want to pay CGT. But there's also the CGT-inflation problem, as discussed later in this paper under \ref{tax rules}{Tax Rules}.}
 At Invoke Analytics we solve difficult problems like these by using mathematical algorithms, machine learning, and statistics, and decided to see if we could help. 
 
-\paragraph{Points to note} \newthought{Pyfin was written by engineers} to support our personal finance decisions. Although we spoke to tax practitioners and did tests to ensure that we implemented the tax rules correctly, there are no guarantees. Use at your own risk.
+\paragraph{Points to note} \newthought{Pyfin was written by engineers} to support our personal finance decisions. Although we spoke to tax practitioners and did tests to ensure that we implemented the tax rules correctly, there are no guarantees. Use it at your own risk, it doesn't constitute financial advice, etc. etc.
 
-\newthought{Saving large amounts of money} in any of these vehicles will leave you with, well, large amounts of money \sidenote{Provided you use a low fee, high growth vehicle such as ETFs via \href{www.easyequities.co.za}{Easy Equities}}. There are better and worse ways to do it, of course, and that's where StrataGEM comes in. But the key is to save a lot. The calculator can only work with the money you're willing to put away. For more on this, I highly recommend the Fat Wallet Show. And besides, living frugally and saving more will probably make you happier\sidenote{(source)}.
+\newthought{Saving large amounts of money} in any of these vehicles will leave you with, well, large amounts of money\sidenote{Provided you use a low fee, high growth vehicle such as ETFs via \href{www.easyequities.co.za}{Easy Equities}}. There are better and worse ways to do it, of course, and that's where StrataGEM comes in. But the key is to save a lot. The calculator can only work with the money you're willing to put away. Living frugally and saving a lot will leave you richer (and probably happier) than living large and saving what is left optimally.
 
-\newthought{"Year zero", when your funds run out}, is extremely sensitive to the withdrawal rate. If you withdraw too much or the investments underperform, you could run out of money years before your life expectancy. The 4\% rule says that backtested over the last hundred years, withdrawing 4\% of capital per year from an investment will ensure that you don't reduce your capital\sidenote{E.g., see \href{http://www.stealthywealth.co.za/2016/06/what-is-4-rule-for-retirement.html}{this} Stealthy Wealth article}. The goal of Pyfin is not to preserve capital, but to maximise income. Therefore the withdrawal rates are often above 4\%. Bear that in mind.
+\newthought{"Year zero", when your funds run out}, is extremely sensitive to the withdrawal rate. If you withdraw too much or the investments underperform, you could run out of money years before your life expectancy. The ``4\% rule'' says that backtested over the last hundred years, withdrawing 4\% of capital per year from an investment will ensure that you preserve your capital\sidenote{E.g., see \href{http://www.stealthywealth.co.za/2016/06/what-is-4-rule-for-retirement.html}{this} Stealthy Wealth article}. Pyfin has two settings: capital preservation, and income maximisation. With capital preservation, it will withdraw 4\% per year during retirement. With income maximisation, it will withdraw as much as it can to give you a steady income until your life expectancy. So it aims to have zero capital in the year of your death. These the withdrawal rates are often above 4\%, depending on your retirement age and life expectancy. Bear that in mind.
 
 \newthought{StrataGEM's objective is to maximise your mean retirement income after tax}, not to minimize the tax you pay. These two numbers are related, but not identical. The algorithm tries to structure your investments in such a way that your money works for you in the most effective way possible. However, the solutions may be counter-intuitive. It may seem that you pay less tax by sticking to the R33k TFSA limit and using your 27.5\% RA allowance. However, these have tax implications later in life, which may overshadow the tax benefits now (depending on the growth of the investments). 
 
-\newthought{StrataGEM is powered by the PyFin library}, an open-source Python library created for this purpose. It available on Github (XXXX hyperlink to repoXXXX) under the \href{https://opensource.org/licenses/GPL-3.0}{GPL-3.0} the license. The GPL license states that the source code, or any derivative work must be free and must also carry the GPL license, and that the source code must be made available. This does not prevent commercial companies from using StrataGEM, but does make charging for the service or software illegal\sidenote{This does not prevent Invoke Analytics from tailoring StrataGEM to a specific commercial client's needs.}. We call this "copyleft"; the opposite of copyright. Amandla!
+\newthought{StrataGEM is powered by the PyFin library}, an open-source Python library created for this purpose and available on GitLab\sidenote{\url{https://gitlab.com/invokeanalytics/pyfin}}. Because the software was written to help individuals save money, and not cost them more money, it is licensed under the \href{https://opensource.org/licenses/GPL-3.0}{GPL-3.0}. The GPL license states that the source code, or any derivative work, must be free and must also carry the GPL license, and that the source code must be made available to the end user. This does not prevent commercial companies from using StrataGEM, but does make charging for the service, software, or derivative software illegal\sidenote{This does not prevent Invoke Analytics from tailoring StrataGEM to a specific commercial client's needs.}. This is called "copyleft"; the opposite of copyright. Amandla!
 
 
 \subsection{How it works}
@@ -174,7 +174,15 @@ The investment allocation problem is mathematically complex due to the tax rules
 There are many heuristic methods, most of which are inspired by natural processes (\href{https://en.wikipedia.org/wiki/Particle_swarm_optimization}{particle swarm}, \href{https://en.wikipedia.org/wiki/Simulated_annealing}{simulated annealing}, etc.) The one we use is called the \href{https://en.wikipedia.org/wiki/Genetic_algorithm}{genetic algorithm} (sometimes called an evolutionary search). In layman's terms, it works like this. We start with 100 very good investment allocation plans (individuals), generated semi-randomly to form our initial population. (We say semi-randomly, because we build these solutions according to common-sense plans we would devise) The algorithm evaluates all the individuals according to our objective of maximising post-retirement income after tax. After evaluating the whole population of individuals, it keeps the best individuals. Each individual has a "genetic code": the string describing the sizes of the contributions and withdrawals to each fund in each year. It uses these codes to mates the best individuals with each other by taking bits of the one and bits of the other to form a new hybrid plan. It evaluates these offspring, and again keeps the best parents and offspring. Random individuals are also mutated semi-randomly (in a way that makes sense) to see if minor changes add any value. If they do, they will persist and become part of the gene pool. By repeating this process for a few generations (20-100), the population gradually improves and produces exceptional individuals, which are kept in the hall of fame. At some stage the population plateaus, and no further improvements are made. At this point the algorithm has converged to a solution. The best individual is then selected as the "winning solution".
 
 \subsection{Assumptions}
-\paragraph{Inflation} Because StrataGEM is interested in the optimal investment allocation over time, and not the actual present value of future investments\sidenote{E.g. "to maintain your current living standards, you need to save so much per month"}, inflation doesn't really come into the play. The one exception to this is Capital Gains Tax. Suppose you bought shares for R1m in 2010. If their value grew by the inflation rate, they would be worth roughly $1000000\times1.055^8 = R1.53$m in 2018. In real terms, your assets have not done anything - they have just kept up with inflation. In countries with zero inflation, you might as well have put it under the mattress. But to SARS, you have realised a capital gain of R534 686.50, on which you will pay tax according to the capital gains formula. This sucks. Because of CGT, assets growing at inflation are actually depreciating by the CGT.
+
+\paragraph{Contributions}:
+It is assumed that contributions are made in equal monthly installments. If you invest all your savings in the first month of the tax year, your growth should exceed the project figures. On the other hand, if you withdraw the annual withdrawal figure on the first day of the new tax year, you will see less growth than if you withdraw the sum in equal amounts over twelve months.
+
+\paragraph{Inflation} Because StrataGEM is interested in the optimal investment allocation over time, and not the actual present value of future investments\sidenote{E.g. "to maintain your current living standards, you need to save so much per month"}, inflation doesn't really come into the play.
+
+The one exception to this is Capital Gains Tax. Suppose you bought shares for R1m in 2010. If their value grew by the inflation rate, they would be worth roughly $1000000\times1.055^8 = R1.53$m in 2018. In real terms, your shares have not done anything - they have just kept up with inflation. You are no richer. If the country had a zero inflation rate, you might as well have put it under the mattress. But to SARS, you have realised a capital gain of R534 686.50, on which you will pay tax according to the capital gains formula\sidenote{In technical terms, CGT is not ``indexed''. If this seems vaguely unfair to you, you are in good company. For example, see \href{https://www.saica.co.za/integritax/2014/2285._The_effects_of_inflation.htm}{this} piece in the South African Institute of Chartered Accountants' newsletter.}. Because of CGT, assets growing at inflation are actually depreciating by the CGT.
+
+Therefore we think that for the purposes of the calculation we do not need to consider inflation for CGT, as long as the growth rate is higher than inflation. If the growth rate is lower than inflation, your capital should depreciate by $\left(\frac{1+growth}{1 + inflation}\right)^{n_{years}}$ to keep everything in real-terms, but your capital gains would still be taxed on growth. For example, say that you invest R100~000 at a growth rate of 3\%. Suppose inflation is 5\%. After a year, you will have R103~000. But because of inflation, in real terms it is only worth $100~000 \times \frac{1+0.03}{1+0.05} = R98~095.24.$ However, according to SARS you still realised a capital gain of R3 000 if you were to sell the investment.
 
 
 \paragraph{Tax rules} \label{tax rules}
@@ -182,19 +190,10 @@ If we do include inflation in all our calculations, we should also adjust our ta
 
 Since StrataGEM is concerned with maximising retirement income and not estate planning, the capital gains tax payable on the disposal of assets at the time of death are not considered.
 
-SARS states that 
-\begin{quote}
-With  the  introduction  of  section 9C, the proceeds  on  disposal  of equity shares (including shares in foreign 
-companies listed on a South African exchange) held as trading stock for at least three years are treated as being of a capital nature.\sidenote{\href{http://www.sars.gov.za/AllDocs/OpsDocs/Guides/LAPD-IT-G11\%20-\%20Tax\%20Guide\%20for\%20Share\%20Owners\%20-\%20External\%20Guide.pdf}{Tax Guide for Share Owners, (Issue 5) , p.6.}}
-\end{quote}
-Some have wondered if one is still liable for CGT if one sells and buys shares every three years to avoid CGT.\sidenote{There is a three-year rule for the disposal of shares, and how they are taxed} However, as Simon Brown points out\sidenote{\href{https://justonelap.com/podcast-cgt-hacking-failed/}{CGT Hacking failed}},
-\begin{quote}
-The most important factor in determining whether a profit is of a capital or revenue nature is 
-the intention of the person when the shares were bought and sold. \sidenote{\href{http://www.sars.gov.za/AllDocs/OpsDocs/Guides/LAPD-IT-G11\%20-\%20Tax\%20Guide\%20for\%20Share\%20Owners\%20-\%20External\%20Guide.pdf}{Tax Guide for Share Owners, (Issue 5) , p.3.}}
-\end{quote} Therefore StrataGEM does not bake such strategies in to avoid CGT. It would kinda be the definition of intentionally avoiding tax.
+``CGT Hacking'' and other fancy footwork are not built in\sidenote{SARS states that ``With  the  introduction  of  section 9C, the proceeds  on  disposal  of equity shares (including shares in foreign companies listed on a South African exchange) held as trading stock for at least three years are treated as being of a capital nature.(\href{http://www.sars.gov.za/AllDocs/OpsDocs/Guides/LAPD-IT-G11\%20-\%20Tax\%20Guide\%20for\%20Share\%20Owners\%20-\%20External\%20Guide.pdf}{Tax Guide for Share Owners, (Issue 5) , p.6.}) Some have wondered if one is still liable for CGT if one sells and buys shares every three years to avoid CGT. However, \href{https://justonelap.com/podcast-cgt-hacking-failed/}{as Simon Brown points out}, and as it states in \href{http://www.sars.gov.za/AllDocs/OpsDocs/Guides/LAPD-IT-G11\%20-\%20Tax\%20Guide\%20for\%20Share\%20Owners\%20-\%20External\%20Guide.pdf}{SARS Tax Guide for Share Owners, (Issue 5) , p.3.} ``The most important factor in determining whether a profit is of a capital or revenue nature is the intention of the person when the shares were bought and sold.'' Therefore StrataGEM does not bake such strategies in to avoid CGT. It would kinda be the definition of intentionally avoiding tax.}.
 
 \subsection{What to expect}
-The first thing to expect is that you will be taking financial advice from a computer, which feels a bit weird. Of course a lot of human thought and care went into building the program, but you may still be uncomfortable investing money, possibly in counter-intuitive ways, on the advice from a computer. It feels weird to us too. The best advice we have is to check the answers. Try to come up with a better solution yourself by trying different plans. This will give you a feel for the numbers.
+The first thing to expect is that you will be taking financial advice from a computer, which feels a bit weird. You could try to be fancy and call it a ``Robo-advisor'' or ``AI'' the way OUTvest and other financial services companies' marketing departments do, but that's just smoke and mirrors. It is not a robot, and it is not AI. But it is still a computer program. Of course a lot of human expertise, thought, and care went into building the program, but you may still be uncomfortable investing money, possibly in counter-intuitive ways, on the advice from a calculator. It feels weird to us too. The best advice we have is to check the answers. Try to come up with a better solution yourself by trying different plans. This will give you a feel for the numbers.
 
 The output of the analysis will be a report that shows you how to allocate your funds, and how your capital is expected to grow. You will also get a spreadsheet showing all of the intermediate numbers, in case you are interested.
 
